--- a/yuque.css
+++ b/yuque.css
@@ -1,4 +1,4 @@
-@import 'vue/fonts.css';
+@import 'yuque/fonts.css';
 
 :root {
     --side-bar-bg-color: #fff;
@@ -50,7 +50,7 @@ body > *:last-child {
 }
 
 a {
-    color: #42b983;
+    color: #4191F7;
     font-weight: 600;
     padding: 0 2px;
     text-decoration: none;
@@ -124,8 +124,6 @@ h2 {
     font-size: 1.75rem;
     line-height: 1.225;
     margin: 35px 0 15px;
-    padding-bottom: 0.5em;
-    border-bottom: 1px solid #ddd;
 }
 
 h3 {
@@ -233,10 +231,10 @@ ol:last-child {
 }
 
 blockquote {
-    border-left: 4px solid #42b983;
+    border-left: 3px solid rgb(218, 218, 218);
     padding: 10px 15px;
     color: #777;
-    background-color: rgba(66, 185, 131, .1);
+    background-color: rgb(245, 245, 245);
 }
 
 table {
